Fixed colour picker sometimes overflowing window (issue #43)

--- a/brain-app-server/style.css
+++ b/brain-app-server/style.css
@@ -9,3 +9,9 @@
     display: inline-block;
     white-space: nowrap;
 }
+
+.clip-to-bottom {
+    top: auto !important;
+    bottom: 0 !important;
+}
+
